# fail2ban-rpc

./: CHANGELOG.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  pytest.ini  tox.ini
ci/templates/.github/workflows/: github-actions.yml
docs/: conf.py  usage.rst
src/fail2ban_rpc/: cli.py  daemon.py
tests/: test_cli.py  test_daemon.py
