[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fail2ban_rpc"
authors = [
    {name = "Oleksandr Ostrenko", email = "oleksandr@ostrenko.dev"},
]
description = "RPC forwarder for fail2ban client to run a specific command on a remote server"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["fail2ban", "remote", "administration"]
license = {text = "BSD-3-Clause"}
classifiers = [
    # As from http://pypi.python.org/pypi?%3Aaction=list_classifiers
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking"
]
dependencies = [
    "click",
    "python-daemon",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

# see https://daniel.feldroy.com/posts/2023-08-pypi-project-urls-cheatsheet
[project.urls]

# Project homepage
homepage = "https://github.com/breezerider/fail2ban-rpc"

# The changelog
changelog = "https://github.com/breezerider/fail2ban-rpc/blob/master/CHANGELOG.rst"

# Any long form docs
documentation = "https://fail2ban-rpc.readthedocs.io/"

# Bugs/issues/feature requests
issues = "https://github.com/breezerider/fail2ban-rpc/issues"


[tool.black]
line-length = 120
target-version = ['py311']
preview = true
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = false
force_grid_wrap = 0
force_single_line = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
indent = 4
atomic = true
case_sensitive = false
balanced_wrapping = false

[tool.setuptools.dynamic]
version = {attr = "fail2ban_rpc.__version__"}

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
fail2ban-rpc-client = "fail2ban_rpc.client:main"
fail2ban-rpc-daemon = "fail2ban_rpc.daemon:daemon_cli"

[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "0.0.0"
# parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
# serialize = [
#     "{major}.{minor}.{patch}"
# ]
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "src/fail2ban_rpc/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
search = "Unreleased"
replace = "{new_version} ({now:%Y-%m-%d})"

[[tool.bumpversion.files]]
filename = "README.rst"
search = "v{current_version}"
replace = "v{new_version}"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = release = '{current_version}'"
replace = "version = release = '{new_version}'"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests", "*__init__.py", "*__init__.pxd"]
parallel = true

[tool.coverage.report]
fail_under = 95
show_missing = true
precision = 2
omit = ["*migrations*"]
